[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbar23.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbar23_bar.png" type="Texture" id=2]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/ItemSlots.tscn" type="PackedScene" id=3]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Player/Player/UserInterface/Combat hotbar/Combat hotbar.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbar23_bar-small.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbar23_glass.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbar23_glass-small.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbat23_set_button-pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/hotbat23_set_button.png" type="Texture" id=10]
[ext_resource path="res://Assets/Themes/UI_Title.tres" type="Theme" id=11]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/switch_btn2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/switch_btn1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/User interface/combat hotbar/set-tab.png" type="Texture" id=16]
[ext_resource path="res://World/Player/Player/UserInterface/Menu/MenuTitle.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Images/User interface/buttons-icons/x-button-pressed.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/User interface/buttons-icons/x-button.png" type="Texture" id=19]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=20]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=21]
[ext_resource path="res://Assets/Images/Spell icons/wind/1.png" type="Texture" id=22]
[ext_resource path="res://World/Player/Player/UserInterface/Combat hotbar/SpellIconBtn.gd" type="Script" id=23]
[ext_resource path="res://World/Player/Player/UserInterface/Combat hotbar/CombatHotbarMenu.gd" type="Script" id=24]
[ext_resource path="res://Assets/Images/User interface/hotbars/selected slot.png" type="Texture" id=25]

[node name="Combat hotbar" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -720.0
margin_right = 640.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="Bg2" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -127.0
margin_right = -214.0
margin_bottom = -79.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="ItemDescription" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -512, -596 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="SetBtn" type="TextureButton" parent="."]
margin_left = 621.0
margin_top = 620.0
margin_right = 633.0
margin_bottom = 624.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )

[node name="SpellSlots" type="GridContainer" parent="."]
margin_left = 399.0
margin_top = 644.0
margin_right = 475.0
margin_bottom = 660.0
rect_scale = Vector2( 3, 3 )
custom_constants/hseparation = 4
columns = 4

[node name="1" type="TextureButton" parent="SpellSlots"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )

[node name="2" type="TextureButton" parent="SpellSlots"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )

[node name="3" type="TextureButton" parent="SpellSlots"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )

[node name="4" type="TextureButton" parent="SpellSlots"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )

[node name="ItemSlots" parent="." instance=ExtResource( 3 )]

[node name="Progresses" type="Control" parent="."]
margin_left = 128.0
margin_top = 117.0
margin_right = 168.0
margin_bottom = 157.0

[node name="Health" type="Control" parent="Progresses"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Back" type="TextureProgress" parent="Progresses/Health"]
modulate = Color( 0.682353, 0, 0, 1 )
margin_left = 163.0
margin_top = 491.0
margin_right = 195.0
margin_bottom = 520.0
rect_scale = Vector2( 3, 3 )
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="Front" type="TextureProgress" parent="Progresses/Health"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 163.0
margin_top = 491.0
margin_right = 195.0
margin_bottom = 520.0
rect_scale = Vector2( 3, 3 )
value = 93.0
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="Mana" type="Control" parent="Progresses"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Back" type="TextureProgress" parent="Progresses/Mana"]
modulate = Color( 0.0901961, 0.298039, 0.827451, 1 )
margin_left = 763.0
margin_top = 491.0
margin_right = 795.0
margin_bottom = 520.0
rect_scale = Vector2( 3, 3 )
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="Front" type="TextureProgress" parent="Progresses/Mana"]
modulate = Color( 0.0509804, 0.482353, 1, 1 )
margin_left = 763.0
margin_top = 491.0
margin_right = 795.0
margin_bottom = 520.0
rect_scale = Vector2( 3, 3 )
value = 93.0
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="Energy" type="Control" parent="Progresses"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Back" type="TextureProgress" parent="Progresses/Energy"]
modulate = Color( 0, 0.662745, 0, 1 )
margin_left = 505.0
margin_top = 518.0
margin_right = 509.0
margin_bottom = 539.0
rect_scale = Vector2( 3, 3 )
value = 100.0
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="Front" type="TextureProgress" parent="Progresses/Energy"]
modulate = Color( 0.00784314, 1, 0, 1 )
margin_left = 505.0
margin_top = 518.0
margin_right = 509.0
margin_bottom = 539.0
rect_scale = Vector2( 3, 3 )
value = 91.0
texture_progress = ExtResource( 6 )
fill_mode = 3

[node name="Decoration" type="Control" parent="."]
margin_left = 128.0
margin_top = 117.0
margin_right = 168.0
margin_bottom = 157.0

[node name="GlassDecoration" type="TextureRect" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.831373 )
margin_left = 151.0
margin_top = 470.0
margin_right = 199.0
margin_bottom = 518.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="GlassDecoration2" type="TextureRect" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.831373 )
margin_left = 751.0
margin_top = 470.0
margin_right = 799.0
margin_bottom = 518.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="GlassDecoration3" type="TextureRect" parent="Decoration"]
modulate = Color( 1, 1, 1, 0.831373 )
margin_left = 487.0
margin_top = 473.0
margin_right = 503.0
margin_bottom = 521.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
texture = ExtResource( 8 )

[node name="SetLabel" type="Label" parent="Decoration"]
margin_left = 493.0
margin_top = 502.0
margin_right = 893.0
margin_bottom = 648.0
rect_scale = Vector2( 0.09, 0.09 )
theme = ExtResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "SET"
align = 1

[node name="SwitchHotbarBtn" type="TextureButton" parent="."]
margin_left = 231.0
margin_top = 666.0
margin_right = 247.0
margin_bottom = 682.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="CombatHotbarMenu" type="Control" parent="."]
visible = false
script = ExtResource( 24 )

[node name="ItemDescription" parent="CombatHotbarMenu" instance=ExtResource( 4 )]
position = Vector2( -512, -596 )

[node name="Bg" type="TextureRect" parent="CombatHotbarMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -19.0
margin_right = 426.0
margin_bottom = 221.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 2
texture = ExtResource( 16 )
stretch_mode = 4

[node name="ExitBtn" type="TextureButton" parent="CombatHotbarMenu"]
margin_left = 918.0
margin_top = 95.0
margin_right = 932.0
margin_bottom = 109.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
expand = true

[node name="MenuTitle" parent="CombatHotbarMenu" instance=ExtResource( 17 )]
margin_left = 552.0
margin_top = 98.0
margin_right = 917.0
margin_bottom = 173.0
text = "Combat hotbar"

[node name="InventorySlots" parent="CombatHotbarMenu" instance=ExtResource( 20 )]
margin_left = 639.0
margin_top = 296.0
margin_right = 939.0
margin_bottom = 548.0
custom_constants/vseparation = 18
custom_constants/hseparation = 15
columns = 5

[node name="HotbarInventorySlots" parent="CombatHotbarMenu" instance=ExtResource( 21 )]
margin_left = 639.0
margin_top = 164.0
margin_right = 943.0
margin_bottom = 278.0
custom_constants/vseparation = 18
custom_constants/hseparation = 15
columns = 5

[node name="Spells" type="GridContainer" parent="CombatHotbarMenu"]
margin_left = 350.0
margin_top = 180.0
margin_right = 426.0
margin_bottom = 220.0
rect_scale = Vector2( 3, 3 )
custom_constants/vseparation = 6
custom_constants/hseparation = 4
columns = 4

[node name="wind 1" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="wind 2" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="wind 3" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="wind 4" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="fire 1" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="fire 2" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="fire 3" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="fire 4" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="electric 1" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="electric 2" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="electric 3" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="electric 4" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="ice 1" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="ice 2" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="ice 3" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="ice 4" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="earth 1" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="earth 2" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="earth 3" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="earth 4" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="dark 1" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="dark 2" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="dark 3" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="dark 4" type="TextureButton" parent="CombatHotbarMenu/Spells"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 22 )
script = ExtResource( 23 )

[node name="SelectedSlot" type="TextureRect" parent="."]
margin_left = 651.0
margin_top = 644.0
margin_right = 699.0
margin_bottom = 692.0
texture = ExtResource( 25 )

[connection signal="pressed" from="SetBtn" to="." method="_on_SetBtn_pressed"]
[connection signal="pressed" from="SpellSlots/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="SpellSlots/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="SpellSlots/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="SpellSlots/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="SwitchHotbarBtn" to="." method="_on_SwitchHotbarBtn_pressed"]
[connection signal="pressed" from="CombatHotbarMenu/ExitBtn" to="CombatHotbarMenu" method="_on_ExitBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/wind 1" to="CombatHotbarMenu/Spells/wind 1" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/wind 1" to="CombatHotbarMenu/Spells/wind 1" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/wind 1" to="CombatHotbarMenu/Spells/wind 1" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/wind 2" to="CombatHotbarMenu/Spells/wind 2" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/wind 2" to="CombatHotbarMenu/Spells/wind 2" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/wind 2" to="CombatHotbarMenu/Spells/wind 2" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/wind 3" to="CombatHotbarMenu/Spells/wind 3" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/wind 3" to="CombatHotbarMenu/Spells/wind 3" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/wind 3" to="CombatHotbarMenu/Spells/wind 3" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/wind 4" to="CombatHotbarMenu/Spells/wind 4" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/wind 4" to="CombatHotbarMenu/Spells/wind 4" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/wind 4" to="CombatHotbarMenu/Spells/wind 4" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/fire 1" to="CombatHotbarMenu/Spells/fire 1" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/fire 1" to="CombatHotbarMenu/Spells/fire 1" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/fire 1" to="CombatHotbarMenu/Spells/fire 1" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/fire 2" to="CombatHotbarMenu/Spells/fire 2" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/fire 2" to="CombatHotbarMenu/Spells/fire 2" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/fire 2" to="CombatHotbarMenu/Spells/fire 2" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/fire 3" to="CombatHotbarMenu/Spells/fire 3" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/fire 3" to="CombatHotbarMenu/Spells/fire 3" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/fire 3" to="CombatHotbarMenu/Spells/fire 3" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/fire 4" to="CombatHotbarMenu/Spells/fire 4" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/fire 4" to="CombatHotbarMenu/Spells/fire 4" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/fire 4" to="CombatHotbarMenu/Spells/fire 4" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/electric 1" to="CombatHotbarMenu/Spells/electric 1" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/electric 1" to="CombatHotbarMenu/Spells/electric 1" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/electric 1" to="CombatHotbarMenu/Spells/electric 1" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/electric 2" to="CombatHotbarMenu/Spells/electric 2" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/electric 2" to="CombatHotbarMenu/Spells/electric 2" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/electric 2" to="CombatHotbarMenu/Spells/electric 2" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/electric 3" to="CombatHotbarMenu/Spells/electric 3" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/electric 3" to="CombatHotbarMenu/Spells/electric 3" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/electric 3" to="CombatHotbarMenu/Spells/electric 3" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/electric 4" to="CombatHotbarMenu/Spells/electric 4" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/electric 4" to="CombatHotbarMenu/Spells/electric 4" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/electric 4" to="CombatHotbarMenu/Spells/electric 4" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/ice 1" to="CombatHotbarMenu/Spells/ice 1" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/ice 1" to="CombatHotbarMenu/Spells/ice 1" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/ice 1" to="CombatHotbarMenu/Spells/ice 1" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/ice 2" to="CombatHotbarMenu/Spells/ice 2" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/ice 2" to="CombatHotbarMenu/Spells/ice 2" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/ice 2" to="CombatHotbarMenu/Spells/ice 2" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/ice 3" to="CombatHotbarMenu/Spells/ice 3" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/ice 3" to="CombatHotbarMenu/Spells/ice 3" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/ice 3" to="CombatHotbarMenu/Spells/ice 3" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/ice 4" to="CombatHotbarMenu/Spells/ice 4" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/ice 4" to="CombatHotbarMenu/Spells/ice 4" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/ice 4" to="CombatHotbarMenu/Spells/ice 4" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/earth 1" to="CombatHotbarMenu/Spells/earth 1" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/earth 1" to="CombatHotbarMenu/Spells/earth 1" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/earth 1" to="CombatHotbarMenu/Spells/earth 1" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/earth 2" to="CombatHotbarMenu/Spells/earth 2" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/earth 2" to="CombatHotbarMenu/Spells/earth 2" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/earth 2" to="CombatHotbarMenu/Spells/earth 2" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/earth 3" to="CombatHotbarMenu/Spells/earth 3" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/earth 3" to="CombatHotbarMenu/Spells/earth 3" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/earth 3" to="CombatHotbarMenu/Spells/earth 3" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/earth 4" to="CombatHotbarMenu/Spells/earth 4" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/earth 4" to="CombatHotbarMenu/Spells/earth 4" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/earth 4" to="CombatHotbarMenu/Spells/earth 4" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/dark 1" to="CombatHotbarMenu/Spells/dark 1" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/dark 1" to="CombatHotbarMenu/Spells/dark 1" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/dark 1" to="CombatHotbarMenu/Spells/dark 1" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/dark 2" to="CombatHotbarMenu/Spells/dark 2" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/dark 2" to="CombatHotbarMenu/Spells/dark 2" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/dark 2" to="CombatHotbarMenu/Spells/dark 2" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/dark 3" to="CombatHotbarMenu/Spells/dark 3" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/dark 3" to="CombatHotbarMenu/Spells/dark 3" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/dark 3" to="CombatHotbarMenu/Spells/dark 3" method="_on_SpellIconBtn_pressed"]
[connection signal="mouse_entered" from="CombatHotbarMenu/Spells/dark 4" to="CombatHotbarMenu/Spells/dark 4" method="_on_SpellIconBtn_mouse_entered"]
[connection signal="mouse_exited" from="CombatHotbarMenu/Spells/dark 4" to="CombatHotbarMenu/Spells/dark 4" method="_on_SpellIconBtn_mouse_exited"]
[connection signal="pressed" from="CombatHotbarMenu/Spells/dark 4" to="CombatHotbarMenu/Spells/dark 4" method="_on_SpellIconBtn_pressed"]
